data/derived/comb/progs/unify/prog5066.ml.out
Characters 151-163:
  | Average (a,b) -> ((eval (a,x,y) + eval(b,x,y))/2)
                       ^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
